[package]
authors = ["Nicholas Dujay <nickdujay@gmail.com>"]
name = "game-prototype"
version = "0.1.0"

[dependencies]
failure = "0.1.0"
nalgebra = "0.13"
ncollide = "0.13"
nphysics2d = "0.7"
piston = "0.35.0"
piston2d-graphics = "0.23.0"
piston2d-opengl_graphics = "0.49.0"
pistoncore-glutin_window = "0.42.0"
specs = "0.10"
specs-derive = "0.1.0"
tiled = "0.7.2"
